# agentcore-samples

./: package-lock.json
01-tutorials/01-AgentCore-runtime/08-mcp-e2e/01-server-e2e/: mcp_server_features_e2e.ipynb
01-tutorials/01-AgentCore-runtime/08-mcp-e2e/02-client-e2e/: mcp_client_features_e2e.ipynb
01-tutorials/01-AgentCore-runtime/08-mcp-e2e/03-utilities-e2e/: 01_progress.ipynb
01-tutorials/01-AgentCore-runtime/08-mcp-e2e/helpers/: utils.py
01-tutorials/01-AgentCore-runtime/09-execute-command/: 01_exec_command.ipynb
01-tutorials/01-AgentCore-runtime/09-execute-command/agents/: agent.py
01-tutorials/10-Agent-Registry/01-advanced/admin-approval-workflow/: README.md  admin-approval-workflow-notebook.ipynb
01-tutorials/10-Agent-Registry/01-advanced/registry-synchronize-mcpserver/: registry_synchronize_mcpserver.ipynb
02-use-cases/A2A-multi-agent-incident-response/: DEPLOY_MULTICLOUD.md
02-use-cases/A2A-multi-agent-incident-response/host_adk_agent/: agent.py  main.py
02-use-cases/A2A-multi-agent-incident-response/host_adk_agent/prompt/: __init__.py
02-use-cases/A2A-multi-agent-incident-response/web_search_strands_agent/: DEPLOY_GCP.md  agent.py  agent_executor.py  auth_middleware.py  main.py  memory_tools.py  pyproject.toml  tools.py
02-use-cases/A2A-multi-agent-incident-response/web_search_strands_agent/prompt/: __init__.py
05-blueprints/customer-support-agent-with-agentcore/: README.md
05-blueprints/customer-support-agent-with-agentcore/scripts/: deploy.sh
(+1 files in other folders)
